RESOLVED FIXED95948
[BlackBerry] Always log shader compilation failure
https://bugs.webkit.org/show_bug.cgi?id=95948
Summary [BlackBerry] Always log shader compilation failure
Arvid Nilsson
Reported 2012-09-06 01:17:43 PDT
Also add the shader source to the logs. This makes it easier for other teams to verify new graphics drivers.
Attachments
Patch (4.36 KB, patch)
2012-09-06 02:26 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-09-06 02:26:20 PDT
WebKit Review Bot
Comment 2 2012-09-06 06:40:57 PDT
Comment on attachment 162455 [details] Patch Clearing flags on attachment: 162455 Committed r127736: <http://trac.webkit.org/changeset/127736>
WebKit Review Bot
Comment 3 2012-09-06 06:41:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.