[BlackBerry] Always log shader compilation failure https://bugs.webkit.org/show_bug.cgi?id=95948

Reviewed by George Staikos.

Also add shader source to the logs. In addition, don't bail on the
first failure, run through all shaders so we get a complete set of
logs.

No new tests: no change in functionality.

* platform/graphics/blackberry/LayerRenderer.cpp:
(WebCore::LayerRenderer::loadShader):
(WebCore::LayerRenderer::initializeSharedGLObjects):


Canonical link: https://commits.webkit.org/113838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127736 268f45cc-cd09-0410-ab3c-d52691b4dbfc